deployment-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.allow-http: "false"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  tls:
    - hosts:
      - alexandre.allani.fr
      secretName: echo-tls
  rules:
  - host: alexandre.allani.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
